<resources>
    <string name="app_name">Deel</string>
    <string name="slogan">Millions go hungry everyday around the world. A good reason for you to not waste food.</string>
    <string name="logo">Deel</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="edtEmail">Email</string>
    <string name="edtPassword">Password</string>
    <string name="edtFirstName">First Name</string>
    <string name="edtLastName">Last Name</string>
    <string name="edtPhoneNumber">Phone Number</string>
    <string name="Username">Username</string>
    <string name="title_activity_admin__main">Admin_Main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_customer__main">Customer_Main</string>
    <string name="title_activity_vendor__main">Vendor_Main</string>
    <string name="title_activity_driver__main">Driver_Main</string>
    <string name="exitsApp">Please press again to exit.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="FoodName">Name</string>
    <string name="FoodDesc">Description</string>
    <string name="FoodPrice">Price</string>
    <string name="UploadImg">Upload Image</string>
    <string name="createFood">Create New Food</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="newTo">New to Deel? Sign up</string>
    <string name="navOrder">Order</string>
    <string name="title_activity_admin_main">admin_main</string>
    <string name="CreateClient">Create new Client</string>
    <string name="title_activity_admin_shipper">AdminShipper</string>
    <string name="title_activity_admin_vendor">AdminVendor</string>
    <string name="title_activity_admin_history">AdminHistory</string>
    <string name="title_activity_admin_account">AdminAccount</string>
    <string name="UpdateClient">Update Client</string>
    <string name="UpdateVendor">Update Vendor</string>
    <string name="createVendor">Create New Vendor</string>
    <string name="createShipper">Create New Shipper</string>
    <string name="shop">Shop Name</string>
    <string name="title_activity_tracking_order_shipper">Map</string>
    <string name="title_activity_tracking_order_client">Map</string>
</resources>

