<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminCreateVendor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtFirstName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtLastName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPhoneNumber"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/dropDownVendor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="20dp" />

        <Button
            android:id="@+id/uploadImg"
            android:layout_width="263dp"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
            android:drawablePadding="2dip"
            android:gravity="center"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:text="@string/UploadImg"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/btnCreate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:shadowColor="@android:color/black"
                android:text="@string/createVendor"
                android:textColor="@android:color/white"
                android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>