<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/logo"
        android:padding="50dp"
        android:text="@string/slogan"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtUserName"
            android:hint="@string/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_marginTop="8dp"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnSignIn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@color/colorbtnSignIn"
            android:shadowColor="@android:color/black"
            android:text="@string/signIn" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:shadowColor="@android:color/black"
            android:text="@string/newTo"
            style="?android:attr/buttonBarButtonStyle"/>



    </LinearLayout>



</RelativeLayout>