<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/FoodName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/FoodDesc"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/FoodPrice"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/uploadImg"
            android:layout_width="263dp"
            android:layout_height="60dip"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
            android:drawablePadding="2dip"
            android:gravity="center"
            android:paddingLeft="30dip"
            android:paddingRight="26dip"
            android:singleLine="true"
            android:text="@string/UploadImg"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/btnCreate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:shadowColor="@android:color/black"
                android:textSize="20dp"
                android:text="@string/createFood"
                android:textColorLink="@color/common_google_signin_btn_text_dark_focused" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>